# issue-bazel-jest

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  jest.config.js  package.json  tsconfig.json
src/: BUILD.bazel  myModule.test.ts  myModule.ts
